# parsers

./: .gitignore  Dockerfile  README.md  op.py  pyproject.toml  requirements.in  requirements.txt  run.py
.github/workflows/: linter.yml  publish.yml
one_piece/: __init__.py  anime.py  config.py  manga.py  networking.py  notify.py
parsers/: __init__.py  __main__.py  config.py  main.py
parsers/base/: manga.py  parse_command.py
parsers/config/: __init__.py  manga-config-schema.json
parsers/mangas/: __init__.py  base.py
parsers/my_hero_academia/: __init__.py  manga.py
parsers/my_hero_academia_illegals/: __init__.py  manga.py
parsers/one_piece/: __init__.py  anime.py  manga.py
parsers/one_punch_man/: __init__.py  manga.py
parsers/utils/: aws.py  environment.py  immanga.py  json_encoding.py  notify.py  options.py  todoist.py
