[tool.poetry]
name = "parsers"
version = "1.0.0"
description = "Parse anime and manga and send notification via telegram and a task via todoist"
authors = ["Diego Alloza González <sralloza@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4"
pydantic = "^1.8.2"
requests = "^2.26.0"
sentry-sdk = "^1.4.3"
todoist-python = "^8.1.3"
typer = "^0.4.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
